<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingVertical="10dp"
        android:text="@string/bluetoothtest"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="54sp"
        android:fontFamily="cursive"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button"
            android:text="@string/search"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/ids_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/black"
            android:foregroundTint="@color/white" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/connect_btn"
            android:layout_width="220dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:background="@drawable/button"
            android:text="@string/connect"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:text="@string/led_control"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:fontFamily="sans-serif-condensed"/>
    </RelativeLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingHorizontal="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/led_1_on_btn"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/button"
                android:text="@string/led_1_on"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingHorizontal="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/led_1_off_btn"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/button"
                android:text="@string/led_1_off"
                android:textColor="@color/white" />
        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingHorizontal="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/disconnect_btn"
                android:layout_width="220dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:background="@drawable/button"
                android:text="@string/disconnect"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingHorizontal="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reader_btn"
                android:layout_width="220dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:background="@drawable/button"
                android:text="@string/camera_reader"
                android:textColor="@color/white" />
        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>